# ai-terminal

./: .copilotignore  .gitignore  AGENTS.md  SECURITY.md
.github/: copilot-instructions.md  dependabot.yml
ai-terminal/: angular.json  package-lock.json  package.json
ai-terminal/src/: styles.css
ai-terminal/src-tauri/: Cargo.toml  tauri.conf.json
ai-terminal/src-tauri/src/: main.rs
ai-terminal/src-tauri/src/command/: constants.rs  mod.rs
ai-terminal/src-tauri/src/command/autocomplete/: autocomplete_command.rs
ai-terminal/src-tauri/src/command/core/: execute_command.rs  mod.rs  pty.rs
ai-terminal/src-tauri/src/command/git_commands/: git.rs
ai-terminal/src-tauri/src/command/types/: mod.rs  pty_manager.rs
ai-terminal/src-tauri/src/ollama/model_request/: request.rs
ai-terminal/src-tauri/src/ollama/types/: ollama_model.rs  ollama_state.rs
ai-terminal/src/app/: app.component.css  app.component.html  app.component.ts
ai-terminal/src/app/components/icon/: icon.component.ts
ai-terminal/src/app/constants/: ai.constants.ts  ssh.constants.ts
ai-terminal/src/app/icons/: ai-panel-hidden.icon.ts  ai-panel-visible.icon.ts  copy-to-terminal.icon.ts  copy.icon.ts  execute.icon.ts  index.ts
ai-terminal/src/app/models/: chat-history.model.ts  command-history.model.ts  terminal-session.model.ts
ai-terminal/src/app/services/: ai-command.service.ts  ai-response-format.service.ts  ollama-connection.service.ts  terminal-event-listener.service.ts  terminal-output.service.ts  terminal-session.service.ts
(+3 files in other folders)
