[package]
name = "ai-terminal"
version = "1.1.0"
description = "Your AI Mate Inside Your Favourite Terminal"
authors = ["Michele Verriello", "Marco De Vellis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_terminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.4.0", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
nix = { version = "0.30", features = ["signal"] }
tauri-plugin-shell = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
serde_json = "1.0" 
